--- a/assets/style.css
+++ b/assets/style.css
@@ -1,49 +1,70 @@
+* {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+#nav li {
+    height: 100%;
+    list-style: none;
+    float: right;
+    margin: 20px;
+}
+
+#logo {
+    width: 100%;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    top: 20vh
+}
+
 #box {
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
-#logo {
-    width: 100%;
-    display: flex;
-    position: absolute;
-    justify-content: center;
-    top: 35%
-}
-
 #formfield {
-    position: absolute;
-    top: 50%;
+    position: relative;
+    top: 20vh;
 }
 
-#form {
-    width: 400px;
+#box #formfield #form {
+    width: 450px;
+    height: 25px;
     display: inline-block;
-    color: #fff;
-    font-size: 20px;
-    padding: 10px 30px 5px;
+    padding: 5px 30px 5px;
     border-radius: 30px;
-    border: 0.3vh solid rgb(168, 168, 168);
-    transition: all 0.3s ease;
+    border: 0.3vh solid rgb(194, 192, 192);
 }
 
-#box .left {
+#box #formfield #form .iconleft {
     float: right;
 }
 
-#box .right {
+#box #formfield #form .iconright {
     float: left;
 }
 
-#footer span {
-    width: 100%;
-    height: 50px;
-    background: gray;
-    color: white;
-    font-size: 20px;
-    position: fixed;
-    right: 0vh;
-    bottom: 0vh;
+.subtitle {
+    position: relative;
     text-align: center;
+    top: 25vh;
+}
+
+#footer {
+    width: 100%;
+    background: #dadce0;
+    position: absolute;
+    bottom: 0vh;
+    right: 0vh;
+}
+
+#footer span {
+    margin: 60px;
+}
+
+#footer li {
+    display: inline-block;
+    margin: 20px;
+    list-style: none;
 }
